@@ -8,6 +8,7 @@ import org.meveo.model.jobs.JobExecutionResultImpl;
 import org.meveo.model.jobs.JobInstance;
 import org.meveo.model.payments.AccountOperation;
 import org.meveo.model.payments.AccountOperationStatus;
+import org.meveo.model.payments.AccountingScheme;
 import org.meveo.model.payments.OCCTemplate;
 import org.meveo.service.payments.impl.AccountOperationService;
 import org.meveo.service.payments.impl.OCCTemplateService;
@@ -56,11 +57,11 @@ public class AccountingSchemesJobBean extends IteratorBasedJobBean<Long> {
     }
 
     private void executeScript(List<Long> idAOs, JobExecutionResultImpl jobExecutionResult) throws BusinessException {
-        try {
-            List<AccountOperation> accountOperations = accountOperationService.findByIds(idAOs);
+        List<AccountOperation> accountOperations = accountOperationService.findByIds(idAOs);
 
-            Optional.ofNullable(accountOperations).orElse(Collections.emptyList())
-                    .forEach(accountOperation -> {
+        Optional.ofNullable(accountOperations).orElse(Collections.emptyList())
+                .forEach(accountOperation -> {
+                    try {
                         // Find OOC Template
                         OCCTemplate occT = occTemplateService.findByCode(accountOperation.getCode());
 
@@ -72,16 +73,12 @@ public class AccountingSchemesJobBean extends IteratorBasedJobBean<Long> {
                         if (occT.getAccountingScheme() == null) {
                             log.warn("Ignored account operation (id={}, type={}, code={}): no scheme set",
                                     accountOperation.getId(), accountOperation.getType(), accountOperation.getCode());
-                            accountOperationService.updateStatusInNewTransaction(Arrays.asList(accountOperation), AccountOperationStatus.EXPORT_FAILED);
-                            markAsError("No scheme found for OCCTemplate id=" + occT.getId(), jobExecutionResult);
+                            accountOperationService.updateStatusInNewTransaction(List.of(accountOperation), AccountOperationStatus.EXPORT_FAILED);
+                            throw new BusinessException("Ignored account operation (id=" + accountOperation.getId() + ", type=" + accountOperation.getType() + ")" +
+                                            ": no scheme set for account operation type (id=" + occT.getId() + ", code=" + occT.getCode() + ")");
                         }
 
-                        ScriptInterface script = scriptInstanceService.getScriptInstance(occT.getAccountingScheme().getCode());
-
-                        if (script == null) {
-                            log.warn("No Script linked to AccountingScheme with code={}", occT.getAccountingScheme().getCode());
-                            return;
-                        }
+                        ScriptInterface script = findScript(accountOperation, occT.getAccountingScheme(), jobExecutionResult);
 
                         Map<String, Object> methodContext = new HashMap<>();
                         methodContext.put(Script.CONTEXT_ENTITY, accountOperation);
@@ -101,17 +98,30 @@ public class AccountingSchemesJobBean extends IteratorBasedJobBean<Long> {
 
                         accountOperationService.update(accountOperation);
 
-                    });
-        } finally {
-            jobExecutionResult.setNbItemsProcessedWithError(
-                    jobExecutionResult.getErrors() == null ? 0 : jobExecutionResult.getErrors().size());
-        }
+                    } catch (BusinessException e) {
+                        jobExecutionResult.registerError(e.getMessage());
+                        throw new BusinessException(e);
+                    } catch (Exception e) {
+                        log.error("Error during process AO={} - {}", accountOperation.getId(), e.getMessage());
+                        log.debug("Error during process AO={} - {}", accountOperation.getId(), e.getMessage(), e);
+                        jobExecutionResult.registerError("Error in Account operation (id=" + accountOperation.getId() + ") : " + e.getMessage());
+                        throw new BusinessException(e);
+                    }
+
+                });
 
     }
 
-    private void markAsError(String error, JobExecutionResultImpl jobExecutionResult) {
-        jobExecutionResult.addErrorReport(error);
-        throw new BusinessException(error);
+    private ScriptInterface findScript(AccountOperation ao, AccountingScheme as, JobExecutionResultImpl jobExecutionResult) {
+        try {
+            return scriptInstanceService.getScriptInstance(as.getScriptInstance().getCode());
+        } catch (BusinessException e) {
+            log.error("Error during loading script by code={} | {}", as.getScriptInstance().getCode(), e.getMessage(), e);
+            accountOperationService.updateStatusInNewTransaction(List.of(ao), AccountOperationStatus.EXPORT_FAILED);
+            throw new BusinessException("Account operation (id=" + ao.getId() + ", type=" + ao.getType() + ")" +
+                    " couldn't be processed by accounting scheme (code=" + as.getScriptInstance().getCode() + "): " + e.getMessage());
+        }
+
     }
 
 }
